Insert keyfame uses wrong values #124125

Closed
opened 2024-07-03 22:40:18 +02:00 by Raymond-Luc · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.85

Blender Version
Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: e1743a0317bc
Worked: This has been a bug since 2017 atleast

Short description of error
A bug that happens occasionally when the user sets a keyframe, and jumps to the next keyframe very quickly and repeats the process. Instead of setting a new keyframe, it seems like blender duplicates the previous keyframe instead. Animators often do this to quickly plot keyframes in a short range to insure the animation does not get lost, however this bug will often change their animation instead due to the unintentional duplicate keyframe.

Exact steps for others to reproduce the error

  • Open attached file
  • With mouse cursor in 3D viewport, press right arrow and I key
  • Repeat previous step very quickly

You should see error like in the image, possibly worse:
image

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 555.85 **Blender Version** Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash: `e1743a0317bc` Worked: This has been a bug since 2017 atleast **Short description of error** A bug that happens occasionally when the user sets a keyframe, and jumps to the next keyframe very quickly and repeats the process. Instead of setting a new keyframe, it seems like blender duplicates the previous keyframe instead. Animators often do this to quickly plot keyframes in a short range to insure the animation does not get lost, however this bug will often change their animation instead due to the unintentional duplicate keyframe. **Exact steps for others to reproduce the error** - Open attached file - With mouse cursor in 3D viewport, press right arrow and I key - Repeat previous step very quickly You should see error like in the image, possibly worse: ![image](/attachments/c0445d8b-21ce-45a1-ba63-fd05dff467a3)
Raymond-Luc added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-03 22:40:19 +02:00

Can reproduce in 4.1, but not in current alpha. Please check if this happens with alpha build from https://builder.blender.org/download/daily/

Can reproduce in 4.1, but not in current alpha. Please check if this happens with alpha build from https://builder.blender.org/download/daily/
Richard Antalik added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2024-07-04 01:57:17 +02:00
Author

I was still able to recreate it in 4.3 Alpha from today:

I was still able to recreate it in 4.3 Alpha from today:

Thanks for checking, will confirm then

Thanks for checking, will confirm then
Richard Antalik changed title from Set keyfame duplicates previous keyframe when jumping to the next frame in fast succesion to Insert keyfame uses wrong values 2024-07-04 23:41:54 +02:00
Christoph Lendenfeld self-assigned this 2024-07-05 13:54:44 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-07-12 12:09:31 +02:00

reopening because the original solution caused a performance regression when using the "Whole Character" keying set (#125888).
The commit has been reverted and we have to look for a new solution

reopening because the original solution caused a performance regression when using the "Whole Character" keying set (#125888). The commit has been reverted and we have to look for a new solution
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2024-08-06 13:23:08 +02:00
Christoph Lendenfeld added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-08-06 13:23:24 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-13 11:19:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#124125
No description provided.