Fix #124125: Depsgraph and scene time out of sync

When quickly running the "frame step" and "insert key" operators it was possible to
run the key insertion when the depsgraph hasn't yet been updated.
Because the key insertion code took the frame from the scene, but the channel values
from the depsgraph, the inserted keys were appearing to be duplicated from a different frame.

The fix is to ensure an evaluated depsgraph is used, so the correct values are placed
at the correct time.

Pull Request: https://projects.blender.org/blender/blender/pulls/124583